added topic lecture index

--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \usepackage{hyperref}
 \usepackage{xcolor}
 \usepackage{graphicx}
+\usepackage{float}
 \graphicspath{/Users/collinsinclair/Documents/School/2021/sp21/ASTR 3830/finalExam/images}
 \hypersetup{
     colorlinks,
@@ -505,4 +506,40 @@ Due to more mergers occurring in dense environments (clusters) and the transform
     \item The hotter the gas, the more massive the cluster.
 \end{itemize}
 \chapter{Final Exam Content}
+
+\backmatter
+\chapter{Topic-Lecture Index}
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|ll|}
+        \hline
+        \multicolumn{1}{|c}{Topic}      & Lecture \\ \hline \hline
+        Welcome to ASTR 3830            & 1       \\ \hline
+        Dark Matter                     & 2       \\ \hline
+        Galactic Center                 & 3       \\ \hline
+        Galaxy Morphologies             & 4       \\ \hline
+        Surface Brightness              & 5       \\ \hline
+        Spiral Galaxies                 & 6       \\ \hline
+        Elliptical Galaxies             & 7       \\ \hline
+        Luminosity Function of Galaxies & 8       \\ \hline
+        Galactic Evolution              & 9       \\ \hline
+        Galactic Evolution              & 10      \\ \hline
+        Extragalactic Distance Scale    & 11      \\ \hline
+        Extragalactic Distance Scale    & 12      \\ \hline
+        Galaxy Clusters                 & 13      \\ \hline
+        Galaxy Clusters                 & 14      \\ \hline
+        Active Galaxies                 & 15      \\ \hline
+        Active Galaxies                 & 16      \\ \hline
+        Active Galaxies                 & 17      \\ \hline
+        Gravitational Lensing           & 18      \\ \hline
+        Cosmology                       & 19      \\ \hline
+        Cosmology                       & 20      \\ \hline
+        Cosmology                       & 21      \\ \hline
+        Cosmology                       & 22      \\ \hline
+        Cosmology                       & 23      \\ \hline
+        Cosmology                       & 24      \\ \hline
+        Cosmology                       & 25      \\ \hline
+        Cosmology                       & 26      \\ \hline
+    \end{tabular}
+\end{table}
 \end{document}
