--- a/main.tex
+++ b/main.tex
@@ -506,6 +506,261 @@ Due to more mergers occurring in dense environments (clusters) and the transform
     \item The hotter the gas, the more massive the cluster.
 \end{itemize}
 \chapter{Final Exam Content}
+\section{Active Galaxies}
+\subsection{Active Galactic Nuclei}
+\begin{itemize}
+    \item Active Galactic Nuclei: Supermassive black holes that are active/accreting gas (most of them are inactive). Their host galaxy is called an Active galaxy
+          \begin{itemize}
+              \item FYI: never put your nose across the event horizon boundary
+                    \begin{center}
+                        \includegraphics[width = 0.2\textwidth]{images/agn_dog.png}
+                    \end{center}
+              \item Calculating if another galaxy has a SMBH by measuring spectra of the gas at the center, get a velocity map and calculate the mass
+          \end{itemize}
+    \item Types:
+          \begin{itemize}
+              \item Quasars
+                    \begin{itemize}
+                        \item Quasi-stellar radio sources
+                        \item Very luminous (most luminous AGN) and visible from far away
+                        \item Have both broad and narrow emission lines in their spectra
+                        \item Quasars are radio-loud, QSOs are radio-quiet
+                        \item Their energy comes from accretion onto supermassive black holes
+                        \item Even 1 solar mass of accreting gas can generate enough energy to outshine the galaxy
+                        \item To find out if a source is a star or an AGN, look at the spectra
+                    \end{itemize}
+              \item Seyferts
+                    \begin{itemize}
+                        \item Most common types of AGNs (weaker AGN)
+                        \item Usually found in spiral galaxies
+                        \item Defined by their spectra:
+                              \begin{itemize}
+                                  \item Type 1 Seyfert: has both broad and narrow emission lines
+                                  \item Type 2 Seyfert: has narrow emission lines only
+                              \end{itemize}
+                    \end{itemize}
+              \item Radio Galaxies
+                    \begin{itemize}
+                        \item Have strong radio emission (from synchrotron radiation)
+                        \item Usually found in elliptical galaxies
+                        \item Two categories:
+                              \begin{itemize}
+                                  \item BLRG = broad and narrow emission lines
+                                  \item NLRG = narrow emission lines only
+                              \end{itemize}
+                        \item Radio jets
+                    \end{itemize}
+              \item Blazars
+                    \begin{itemize}
+                        \item Have almost no emission lines
+                        \item Strong radio emission
+                        \item Usually found in elliptical galaxies
+                    \end{itemize}
+          \end{itemize}
+          \begin{center}
+              \includegraphics[height = 0.6 \textwidth]{images/types_agn.png}
+          \end{center}
+\end{itemize}
+\subsection{AGN Structure}
+\begin{center}
+    \includegraphics[width = \textwidth]{images/agn_structure.png}
+\end{center}
+\subsection{AGN Luminosity}
+\begin{itemize}
+    \item Accretion luminosity:
+          \begin{equation*}
+              L_{disk} = \eta \dot{M} c^2 \tag{C\&O 28.6}
+          \end{equation*}
+          where $\eta$ is the efficiency of the process, usually aroun 10\%.
+    \item Not all the energy of the accretion disk goes into luminosity, some goes into heat
+    \item There is an upper limit to the luminosity you can get: the Eddington Luminosity Limit is given by
+          \begin{equation*}
+              L_{Ed} = \frac{4 \pi G c}{\bar{\kappa}} M  \simeq 1.5 \times 10^{31} \frac{M}{M_\odot}\ W \tag{10.114}
+          \end{equation*}
+          and represents the maximum radiative luminosity that a star can have and still remain in hydrostatic equilibrium.
+\end{itemize}
+\subsubsection{AGN Variability}
+\begin{itemize}
+    \item Luminosity can vary on timescales as short as months, weeks or days
+    \item Broad emission lines are variable but narrow emission lines have little variation
+    \item Calculate the size of the Broad Line Region (BLR), using the timescale of variability: $d = c \Delta t$
+          \begin{center}
+              \includegraphics[height = 0.3 \textwidth]{images/broad_line.png}
+          \end{center}
+    \item Calculate the size of the Narrow Line Region (NLR), using the Stromgren radius:
+          \begin{equation*}
+              r_{NLR} \approx \left( \frac{3N}{4 \pi \alpha_{qm} \epsilon} \right)^{1/3} \frac{1}{n_e^{2/3}} \tag{C\&O 28.13}
+          \end{equation*}
+    \item Flickering AGN (burping): supermassive black hole that accretes some gas (became an AGN), and created radiation. Then the AGN stopped accreting, then later on it started accreting gas again. Caused by galaxy mergers. Fermi bubble: echo from Sgr A$^*$.
+    \item Voorwerp: echos of emission from an AGN that has since turned off
+    \item Spectral Energy Distribution (SED) of an AGN: spectrum that covers all wavelengths
+          \begin{itemize}
+              \item Radio: radio-loud and radio quiet AGN
+              \item IR bump: reradiated light from the dusty torus
+              \item Big blue bump: in UV, direct thermal emission from all the gas in the accretion disk
+              \item X-ray: Compton scattering of the accretion disk photons
+          \end{itemize}
+    \item Monochromatic Energy Flux: AGN can be approximated by
+          \begin{equation*}
+              F_\nu \propto \nu^{-\alpha} \tag{C\&O 28.1}
+          \end{equation*}
+\end{itemize}
+\subsection{Gravitational Lensing}
+\begin{itemize}
+    \item Massive objects warp spacetime, more massive, more curved
+    \item Gravitational wave:
+          \begin{itemize}
+              \item Any massive object rolling around creates gravitational waves
+              \item Gravitational waves stretch and compress Earth as they pass by
+              \item LIGO has detected 70 mergers
+              \item LISA to detect gravitational waves in space using laser interferometry between three free-flying spacecraft
+          \end{itemize}
+    \item Gravitational Lensing
+          \begin{center}
+              \includegraphics[height = 0.4 \textwidth]{images/lensing.png}
+          \end{center}
+          \begin{itemize}
+              \item Light from a background source traveling through curved space-time near a massive lens can create multiple observed images of the source. The angular deviation of a photon passing a distance $r_0$ from a mass $M$ is
+                    \begin{equation*}
+                        \phi = \frac{4 G M}{r_0 c^2}\ \text{rad} \tag{C\&O 28.20}
+                    \end{equation*}
+              \item Lens equation:
+                    \begin{equation*}
+                        \theta^2 - \beta \theta - \frac{4 G M}{c^2} \left( \frac{d_s - d_L}{d_s d_L} \right) = 0 \tag{C\&O 28.21}
+                    \end{equation*}
+              \item Mass of the lens:
+                    \begin{equation*}
+                        M = - \frac{\theta_1 \theta_2 c^2}{4 G} \left( \frac{d_S d_L}{d_S - d_L} \right) \tag{C\&O 28.23}
+                    \end{equation*}
+              \item Einstein ring: when the source is exactly behind the lens, it creates a perfect circle around the lens
+                    \begin{equation*}
+                        \theta_E = \sqrt{\frac{4 G M}{c^2} \left( \frac{d_S - d_L}{d_S d_L} \right) }\ \text{rad} \tag{C\&O 28.24}
+                    \end{equation*}
+              \item Uses of gravitational lensing:
+                    \begin{itemize}
+                        \item Measure masses of lenses (assuming a NFW profile)
+                        \item Search for dark matter via MACHO lensing (microlensing)
+                    \end{itemize}
+              \item Regimes
+                    \begin{itemize}
+                        \item Microlensing: lens not very massive (i.e. MACHOs), flickering
+                        \item Strong lensing: lens is massive
+                        \item Weak lensing: multiple images not produced, instead tiny distortion of the shape of the object
+                    \end{itemize}
+          \end{itemize}
+\end{itemize}
+\section{Cosmology}
+Cosmological principle: the universe is isotropic and homogeneous.
+\subsection{Models}
+\subsubsection{Pressureless Dust Model}
+\begin{itemize}
+    \item Only one component: pressureless dust
+          \begin{center}
+              \includegraphics[width = 0.9 \textwidth]{images/cosmo_setup.png}
+          \end{center}
+    \item $\varpi$ is the co-moving coordinate
+    \item For $k > 0$, $\Omega_0 > 1$, universe is closed and will collapse on itself
+    \item For $k < 0$, $\Omega_0 < 1$, universe is open and will expand forever
+    \item For $k = 0$, $\Omega_0 = 1$, universe is flat and will slow down and come to a halt as $t \to \infty$
+    \item $R(t)$ is the scale factor that describes the expansion (dimensionless)
+          \begin{equation*}
+              r(t) = R(t) \varpi \tag{C\&O 29.3}
+          \end{equation*}
+    \item $R$ and the redshift $z$ are related by
+          \begin{equation*}
+              R = \frac{1}{1 + z} \tag{C\&O 29.4}
+          \end{equation*}
+    \item Today, $R = 1$ ($z = 0$). At $z = 2$, the size of the universe was $\frac{1}{3}$ what it is today.
+    \item Hubble Law:
+          \begin{equation*}
+              v(t) = H(t) r(t) = H(t) R(t) \varpi \tag{C\&O 29.7}
+          \end{equation*}
+    \item The value of the density that will result in a value of $k = 0$ is known as the critical density,
+          \begin{equation*}
+              \rho_c (t) = \frac{3 H^2 (t)}{8 \pi G} \tag{C\&O 29.12}
+          \end{equation*}
+    \item The density parameter $\Omega (t)$ is the ratio of a measured density to the critical density:
+          \begin{equation*}
+              \Omega_0 = \frac{\rho_0}{\rho_c} = \frac{8 \pi G \rho_0}{3 H_0^2}
+          \end{equation*}
+    \item For a flat universe ($k = 0$, $\rho_0 = \rho_{c,0}$, and $\Omega_0 = 1$),
+          \begin{equation*}
+              R_{flat} = \left( \frac{3}{2} \right)^{2/3} \left( \frac{t}{t_H} \right)^{2/3} \tag{C\&O 29.31}
+          \end{equation*}
+          \begin{itemize}
+              \item the universe was essentially flat
+          \end{itemize}
+\end{itemize}
+\subsubsection{Two-Component Model}
+\begin{itemize}
+    \item Accounts for the relativistic equivalence of mass and energy from CMB on expansion
+    \item Includes both the total density of matter (baryonic and dark), $\rho_m$, and the equivalent mass density of relativistic particles (such as neutrinos and CMB photons), $\rho_{rel}$
+    \item Equation of state:
+          \begin{equation*}
+              P = w u \tag{C\&O 29.52}
+          \end{equation*}
+          \begin{itemize}
+              \item matter: $w_m = 0$
+              \item relativistic particle: $w_{rel} = 1/3$
+              \item dark energy: $w_\Lambda = -1$
+          \end{itemize}
+    \item Density evolves as
+          \begin{equation*}
+              R^{3(1 + w)} \rho = \text{constant} = \rho_0
+          \end{equation*}
+\end{itemize}
+\subsubsection{Three-Component ($\Lambda$CDM) Model}
+See Early Universe section below.
+\subsection{Cosmic Microwave Background}
+\begin{center}
+    \includegraphics[height = 0.4 \textwidth]{images/CMB.png}
+\end{center}
+\begin{itemize}
+    \item Temperature
+          \begin{center}
+              \includegraphics[width = \textwidth]{images/cobe_spec.png}
+          \end{center}
+          \begin{itemize}
+              \item $[T_0]_{\text{WMAP}} = 2.725 \pm 0.002\ K$
+              \item $T(z) = T_0 (1 + z)$
+          \end{itemize}
+    \item Origin
+          \begin{itemize}
+              \item Early universe was opaque, hot, dense
+              \item Recombination: as it expanded, temperature cooled enough for electrons to combine with photons to form hydrogen and helium
+              \item Decoupling/surface of last scattering: photons could stream freely for the first time
+                    Universe was 380,000 years old
+          \end{itemize}
+\end{itemize}
+\subsection{Big Bang Nucleosynthesis}
+\begin{itemize}
+    \item Baryonic mass: 74\% Hydrogen, 24\% Helium, 2\% heavier elements
+    \item Amount of heavy elements increases with time (more in galaxies with lots of stars/supernova), amount of light elements stars constant with time
+    \item For 17 min, Hydrogen and Helium and the other light elements were created via fusion
+    \item Boltzmann equation (C\&O 8.6) gives the equilibrium ration of the number density of neutrons, $n_n$, to the number density of protons, $n_p$, as
+          \begin{equation*}
+              \frac{n_n}{n_p} = \exp\left[ - (m_n - m_p) c^2 / k T \right]
+          \end{equation*}
+          \begin{itemize}
+              \item Going back in time, $n_n / n_p \to 1$
+              \item As the universe expands, $n_n / n_p$ decreases as $T$ decreases
+          \end{itemize}
+    \item Timeline
+          \begin{itemize}
+              \item $t \sim 10^{-4}$ s and $T \sim 10_{12}$ K: loose particles, universe consisted of protons, neutrons, photons, electrons, positrons, electron and muon neutrons (and their antiparticles). $n_n / n_p = 0.985$
+              \item $t \sim 0.01$ s and $T \sim 10^{10}$ K: no long in equilibrium, neutrinos decay into protons. $n_n / n_p$ = 0.223 (freeze-out)
+              \item $t \sim 2.9$ min and $T \sim 10^9$ K: hydrogen and helium can form. $n_n / n_p = 0.176$
+              \item $t \sim 3 - 20$ min: lighter elements (H, He, Be, Li) fuse (still hot enough, after this it was too cool to fuse)
+          \end{itemize}
+\end{itemize}
+\subsection{Evolution of the Universe}
+\begin{itemize}
+    \item Friedmann equation: description of the dynamic evolution for the universe (isotropic, homogeneous)
+    \begin{equation*}
+        \left[  \left( \frac{1}{R} \frac{dR}{dt} \right)^2 - \frac{8}{3} \pi G \rho \right] R^2 = - k c^2 \tag{C\&O 29.107}
+    \end{equation*}
+\end{itemize}
+\subsection{Distances (Observational Cosmology)}
 
 \backmatter
 \chapter{Topic-Lecture Index}
@@ -542,4 +797,77 @@ Due to more mergers occurring in dense environments (clusters) and the transform
         Cosmology                       & 26      \\ \hline
     \end{tabular}
 \end{table}
+
+\chapter{Potentially Useful Equations}
+\begin{itemize}
+    \item Integrated Star Count:
+          \begin{equation*}
+              n(S, \Omega, r) = \int_{- \infty}^\infty n_M (M, S, \Omega, r)\ dM \tag{C\&O 24.2}
+          \end{equation*}
+          where $n_M (M, S, \Omega, r)$ is the number density of of stars with absolute magnitudes between $M$ and $M+dM$ and attribute $S$ that lie within a solid angle $\Omega$ in a specific direction at a distance $r$ from the observer ($S$ could be composition or the Morgan-Keenan spectral class, for example).
+    \item Integrated star count written in terms of limiting distance, $d$:
+          \begin{equation*}
+              N_M (M, S, \Omega, d)\ dM = \left[ \int_0^d n_M (M, S, \Omega, r) \Omega r^2\ dr \right]\ dM \tag{C\&O 24.3}
+          \end{equation*}
+    \item Differential Star Count:
+          \begin{equation*}
+              A_M (M, S, \Omega, m)\ dM\ dm \equiv \frac{d\bar{N}_M (M, S, \Omega, m)}{dm} dM\ dm \tag{C\&O 24.4}
+          \end{equation*}
+          where $A_M$ is the number of stars with an absolute magnitude between $M$ and $M+dM$ that are found within a solid angle $\Omega$ and have apparent magnitudes in the range between $m$ and $m+dm$.
+    \item In the special case where we assume no interstellar extinction ($A=0$) and infinite universe of uniform stellar density (i.e. $n_M(M, S, \Omega, r) = n_M(M, S) = $ constant),
+          \begin{align*}
+              \bar{N}_M (M, S, \Omega, m) & = \frac{\Omega}{3} n_M (M, S) 10^{3 (m - M + 5)/5}                        \\
+                                          & = \frac{\Omega}{3} n_M (M, S) \exp\left( \ln 10^{3 (m - M + 5)/5} \right) \\
+                                          & = \frac{\Omega}{3} n_M (M, S) e^{[3 (m - M + 5)/5]\ln 10}
+          \end{align*}
+    \item In special case where we assume no interstellar extinction ($A=0$) and infinite universe of uniform stellar density (i.e. $n_M(M, S, \Omega, r) = n_M(M, S) = $ constant),
+          \begin{align*}
+              A_M (M, S, \Omega, m) & = \frac{d\bar{N}_m (M, S, \Omega, m)}{dm}                       \\
+                                    & = \frac{\ln 10}{5} \Omega n_m (M, S) 10^{3(m - M +5)/5}         \\
+                                    & = \frac{3 \ln 10}{5} \bar{N}_M(M, S, \Omega, r) \tag{C\&O 24.5}
+          \end{align*}
+    \item Interstellar Extinction:
+          \begin{equation*}
+              m_\lambda = M_\lambda + 5 \log_{10} d - 5 + A_\lambda \tag{C\&O 12.1}
+          \end{equation*}
+          where $d$ is the distance in pc and $A_\lambda > 0$ represents the number of magnitudes of interstellar extinction present along the line of sight. We also use two other forms of this equation:
+          \begin{align*}
+              d         & = 10^{(m_\lambda - M_\lambda - A_\lambda + 5)/5}            \\
+              A_\lambda & = m_\lambda - M_\lambda + 5 - 5 \log_{10} d \tag{C\&O 24.1}
+          \end{align*}
+    \item Perigalacticon (closest approach):
+          \begin{equation*}
+              r \equiv \frac{a (1 - \epsilon^2)}{1 + \epsilon \cos \theta}
+          \end{equation*}
+          where the ellipticity
+          \begin{equation*}
+              \epsilon = 1 - \beta/\alpha \tag{C\&O 25.1}
+          \end{equation*}
+          and $\alpha$ is the apparent semi-major axis and $\beta$ is the apparent semi-minor axis.
+    \item NFW density profile
+          \begin{equation*}
+              \rho_{NFW} (r) = \frac{\rho_0}{(r/a)(1+r/a)^2} \tag{C\&O 24.52}
+          \end{equation*}
+          where $rho_0$ and $a$ are choices.
+    \item Mass conservation equation and interior mass integral:
+          \begin{equation*}
+              \frac{dM_r}{dr} = 4 \pi r^2 \rho \implies M_r = \int_0^r 4 \pi r^2 \rho dr \tag{C\&O 10.7}
+          \end{equation*}
+    \item Virial theorem: for a system that has reached an equilibrium or steady-state configuration,
+          \begin{equation*}
+              -2 \langle 2 \rangle = \langle U \rangle \tag{C\&O 2.46}
+          \end{equation*}
+          The theorem may also be expressed in terms of the total energy of the system by using the relation $\langle E \rangle = \langle K \rangle + \langle U \rangle$:
+          \begin{equation*}
+              \langle E \rangle = \frac{1}{2} \langle U \rangle
+          \end{equation*}
+    \item Flux is related to an object's luminosity by
+          \begin{equation*}
+              F = \frac{L}{4 \pi r^2} \tag{C\&O 3.2}
+          \end{equation*}
+          We can also define the flux ratio of two stars:
+          \begin{equation*}
+              \frac{F_2}{F_1} = 100^{(m_1 - m_2)/5}
+          \end{equation*}
+\end{itemize}
 \end{document}
