added some stuff

--- a/main.tex
+++ b/main.tex
@@ -756,10 +756,37 @@ See Early Universe section below.
 \subsection{Evolution of the Universe}
 \begin{itemize}
     \item Friedmann equation: description of the dynamic evolution for the universe (isotropic, homogeneous)
+          \begin{equation*}
+              \left[  \left( \frac{1}{R} \frac{dR}{dt} \right)^2 - \frac{8}{3} \pi G \rho \right] R^2 = - k c^2 \tag{C\&O 29.107}
+          \end{equation*}
+    \item With cosmological Constant $\Lambda$, originally to force a static universe
+          \begin{equation*}
+              \left[  \left( \frac{1}{R} \frac{dR}{dt} \right)^2 - \frac{8}{3} \pi G \rho - \frac{1}{3} \Lambda c^2 \right] R^2 = - k c^2 \tag{C\&O 29.108}
+          \end{equation*}
+    \item Equivalent mass density of dark energy:
+          \begin{equation*}
+              \rho_Lambda \equiv \frac{\Lambda c^2}{8 \pi G} = \text{constant} = \rho_{\Lambda, 0} \tag{C\&O 29.113}
+          \end{equation*}
+          and corresponding Friedmann equation
+          \begin{equation*}
+              \left[  \left( \frac{1}{R} \frac{dR}{dt} \right)^2 - \frac{8}{3} \pi G (\rho_m + \rho_{rel} + \rho_\Lambda) \right] R^2 = - k c^2 \tag{C\&O 29.114}
+          \end{equation*}
+    \item Dark matter energy density parameter:
+          \begin{equation*}
+              \Omega_\Lambda = \frac{\rho_\Lambda}{\rho_c} = \frac{\Lambda c^2}{3 H^2} \tag{C\&O 29.118}
+          \end{equation*}
+    \item Total density parameter:
     \begin{equation*}
-        \left[  \left( \frac{1}{R} \frac{dR}{dt} \right)^2 - \frac{8}{3} \pi G \rho \right] R^2 = - k c^2 \tag{C\&O 29.107}
+        \Omega \equiv \Omega_m + \Omega_{rel} + \Omega_\Lambda
     \end{equation*}
+    where
+    \begin{center}
+        \includegraphics[height = 0.15 \textwidth]{images/total_density.png}
+    \end{center}
+    \item Adding these results from the Wilkinson Microwave Anisotropy Probe reveals that $$\Omega_0 = \Omega_{m,0} + \Omega_{rel,0} + \Omega-{\Lambda,0} = 1.$$ that is, the universe is flat ($z = 0$), and dark energy now dominates the expansion of the universe.
 \end{itemize}
+\subsubsection{Acceleration of the Expansion}
+
 \subsection{Distances (Observational Cosmology)}
 
 \backmatter
