finished cosmology section

--- a/main.tex
+++ b/main.tex
@@ -848,8 +848,33 @@ and
           \begin{equation*}
               d_L^2 \equiv \frac{L}{4 \pi F} \tag{C\&O 29.182}
           \end{equation*}
-          so for the 
-    \item
+          which gives
+          \begin{equation*}
+              d_L(z) = \frac{c}{H_0} (1 + z) S(z) \tag{C\&O 29.184}
+          \end{equation*}
+          or for $z \ll 1$,
+          \begin{equation*}
+              d_L (z) \simeq \frac{c z}{H_0} \left[ 1 + \frac{1}{2} (1 - q_0)z\right] \tag{C\&O 29.185}
+          \end{equation*}
+    \item For larger $z$, $d_p (z) < d_L (z)$
+    \item Angular diameter distance $d_A$, which describes how big an object looks to you as a function of redshift $z$, is defined to be
+          \begin{align*}
+              d_A & \equiv \frac{D}{\theta} \tag{C\&O 29.189}            \\
+                  & = \frac{c}{H_0} \frac{S(z)}{1 + z} \tag{C\&O 29.191}
+          \end{align*}
+          Angular diameter distance increases as $z$ increases, then decreases. The expanding universe makes objects look larger.
+    \item Relating these distances,
+          \begin{equation*}
+              d_a(z) < d_p(z) < d_L (z)
+          \end{equation*}
+          where
+          \begin{equation*}
+              d_L = (1+z) d_p
+          \end{equation*}
+          and
+          \begin{equation*}
+              d_A = \frac{d_L}{(1+z)^2} = \frac{d_p}{1+z}
+          \end{equation*}
 \end{itemize}
 
 \backmatter
